优化格式补全文件